# steam-query

./: .gitignore  LIBRARY_USAGE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api-guide.md  architecture.md  cli-guide.md
docs/plans/: 2026-03-06-library-improvements-design.md  2026-03-06-library-improvements-implementation.md
examples/: library_usage.py
steam_game_lookup/: __init__.py  cli.py  steam_client.py
steam_game_lookup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
steam_query/: __init__.py  __init__.pyi  api.py  cli.py  client_sync.py  exceptions.py  steam_client.py  types.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_client_sync.py  test_exceptions.py  test_integration.py  test_steam_client.py
