[project]
name = "steam-game-query"
version = "1.0.0"
description = "Query detailed information for any Steam game - no login required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Carton He", email = "cartonhe@gmail.com"}
]
maintainers = [
    {name = "Carton He", email = "cartonhe@gmail.com"}
]
keywords = ["steam", "games", "api", "cli", "gaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "ratelimit>=2.2.0",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "types-requests>=2.31.0",
]

[project.scripts]
steam-query = "steam_query.cli:cli_main"

[project.urls]
Homepage = "https://github.com/carton/steam-query"
Repository = "https://github.com/carton/steam-query"
Issues = "https://github.com/carton/steam-query/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steam_query"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "types-requests>=2.31.0",
    "twine>=6.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "aiohttp.*,ratelimit.*,colorlog.*,tomllib.*,toml.*"
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
